--- a/SoccerApp/src/assets/base.css
+++ b/SoccerApp/src/assets/base.css
@@ -4,6 +4,9 @@
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
 
+  /* new defined css variable: */
+  --vt-c-gray: #666;
+
   --vt-c-black: #181818;
   --vt-c-black-soft: #222222;
   --vt-c-black-mute: #282828;
@@ -23,7 +26,11 @@
 
 /* semantic color variables for this project */
 :root {
+  /* follow line looks a variable for background color
   --color-background: var(--vt-c-white);
+     changed to a new variable in gray
+*/
+  --color-background: var(--vt-c-gray);
   --color-background-soft: var(--vt-c-white-soft);
   --color-background-mute: var(--vt-c-white-mute);
 
