--- a/SoccerApp/src/assets/main.css
+++ b/SoccerApp/src/assets/main.css
@@ -1,7 +1,8 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
+  /* max-width: 1280px; */
+  max-width: 2048px;
   /* margin: 0 auto; */
   /* padding: 2rem; */
   font-weight: normal;
@@ -33,6 +34,7 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   } */
+
   #app {
     display: flex;
     flex-direction: column;
