--- a/SoccerApp/src/assets/base.css
+++ b/SoccerApp/src/assets/base.css
@@ -89,9 +89,8 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background-image: url("https://cdn.mos.cms.futurecdn.net/v92f8pvXTjqHSGeiDAXxN7-1200-80.jpg"); */
-  /* background-repeat: no-repeat; */
-  /* background-size: cover; */
-  background: url("https://cdn.mos.cms.futurecdn.net/v92f8pvXTjqHSGeiDAXxN7-1200-80.jpg") no-repeat center center fixed;
+  background-image: url("https://cdn.mos.cms.futurecdn.net/v92f8pvXTjqHSGeiDAXxN7-1200-80.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   background-size: 100vw 100vh;
 }
